# spvsdkpy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
interface/: ExceptionFormat.h  IPySubWalletCallback.h  PyMainchainSubWallet.cpp  PyMainchainSubWallet.h  PyMasterWallet.cpp  PyMasterWallet.h  PyMasterWalletManager.cpp  PyMasterWalletManager.h  PySidechainSubWallet.cpp  PySidechainSubWallet.h  PySubWallet.cpp  PySubWallet.h  PySubWalletCallback.cpp  PySubWalletCallback.h  PyTokenchainSubWallet.cpp  PyTokenchainSubWallet.h  SubWalletCallback.cpp  SubWalletCallback.h  spvsdkpy.cpp
test/: CMakeLists.txt  SubWalletCallback.py  client.py  manager.py  master_wallet.py  sub_wallet.py  test.py  test_create_wallet.py  tool.py
